force-app/main/default/objects/OCIInteractionOrderSummary__c/OCIInteractionOrderSummary__c.object-meta.xml
<CustomObject>
    <label>OCI Interaction Order Summary</label>
    <nameField>
        <displayFormat>OCI-{0000}</displayFormat>
        <label>Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OCI Interaction Order Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>