force-app/main/default/objects/OCIInteractionOrderSummary__c/fields/ConnectionFailAttempts__c.field-meta.xml
<CustomField>
    <fullName>ConnectionFailAttempts__c</fullName>
    <label>Connection Fail Attempts</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>