force-app/main/default/objects/OCIInteractionOrderSummary__c/fields/FulfillmentOrder__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfillment Order</label>
    <referenceTo>FulfillmentOrder</referenceTo>
    <relationshipLabel>OCI Interaction Order Summaries</relationshipLabel>
    <relationshipName>OCIInteractionsOrderSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>