force-app/main/default/objects/OCIInteractionOrderSummary__c/fields/OrderDeliveryGroupSummary__c.field-meta.xml
<CustomField>
    <fullName>OrderDeliveryGroupSummary__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order Delivery Group Summary</label>
    <referenceTo>OrderDeliveryGroupSummary</referenceTo>
    <relationshipLabel>OCI Interaction Order Delivery Group Summaries</relationshipLabel>
    <relationshipName>OCIInteractioOrderDeliveryGrpSummaries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>