force-app/main/default/objects/OCIInteractionOrderSummary__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Schedule</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>